[package]
name = "rust_environment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
environment_server = { path = "../environment_server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
libloading = "0.7"