[package]
name = "wasm_rust_environment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
environment_server = { path = "../environment_server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
# TODO: remove git link as soon as it is merged
fp-bindgen-support = { git = "https://github.com/nico151999/fp-bindgen.git", version = "2.0.1", features = ["host", "http", "async"] }
wasmer = "2.3.0"
wasmer-wasi = "2.3.0"
http = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
wasmer-engine-universal = { version = "2.2", features = ["compiler"] }

[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
wasmer-compiler-cranelift = { version = "2.2" }

[target.'cfg(not(any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
wasmer-compiler-singlepass = { version = "2.2" }