[package]
name = "wasm_js_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickjs-wasm-rs = { version="0.1.2", features = ["json"] }
once_cell = "1.13.0"
wee_alloc = "0.4.5"
anyhow = "1.0.58"
# TODO: remove git link as soon as it is merged
fp-bindgen-macros = { git = "https://github.com/nico151999/fp-bindgen.git", version = "2.0.1" }
fission_wasm_js_protocol_plugin = { path = "../../fission_wasm_js_protocol/bindings/fission_wasm_js_protocol_plugin" }
serde_json = "1.0"